tests/vendor/invalid/semantics/use_label_as_variable.c
//tags: simple, goto
int main() {
    int x = 0;
    a:
    x = a;
    return 0;
}